Changed background on some navlinks to black. Hopefully that solves my visibility problem.

--- a/css/main.css
+++ b/css/main.css
@@ -238,14 +238,14 @@ img {
   display: block;
   padding: 10px;
   padding-left: 30px;
-  background: #f5f5f5;
+  background: #000000;
   text-decoration: none !important;
   border-width: 0 1px 1px 1px;
   font-weight: normal;
 }
 @media only screen and (max-width: 767px) {
   .navbar-custom .nav .navlinks-container.show-children {
-    background: #eee;
+    background: #000000;
   }
   .navbar-custom .nav .navlinks-container.show-children .navlinks-children {
     display: block;
@@ -256,7 +256,7 @@ img {
     text-align: center;
   }
   .navbar-custom .nav .navlinks-container:hover {
-    background: #eee;
+    background: #000000;
   }
   .navbar-custom .nav .navlinks-container:hover .navlinks-children {
     display: block;
